[project]
name = "tuskr"
version = "0.1.0"
description = "Perform Mammoth Tasks. One job at a time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "falcon>=4.0.2",
    "kopf>=1.37.4",
    "kubernetes>=32.0.0",
    "pydantic>=2.10.6",
    "pymongo>=4.10.1",
    "redis>=5.2.1",
]

[dependency-groups]
dev = ["black", "flake8", "isort", "mypy", "pylint", "pytest", "ruff"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "src/tests"

[tool.ruff]
exclude = [".venv", ".git", "__pycache__", "build", "dist", "venv"]
lint.select = ["D", "E", "F", "I", "W"]
lint.ignore = []
line-length = 120
src = ["app"]

[tool.mypy]
files = ["app"]
strict_optional = false
warn_unused_ignores = false
